# Agent-Based-Simulation-Model

./: .gitignore  README.md  compile_commands.json  schedule.md  style.md
Agent-Based Simulation/: .gitignore  README.md  makefile
Agent-Based Simulation/docs/: Distributor.MD  Firm.md  InputProductTransactions.md  Person.md  Producer.md  Producer_Distributor_Interactions.md  plot_producer_distributor_transactions.py
Agent-Based Simulation/header/: Agent.h  Constants.h  ConsumerGood.h  Distributor.h  Firm.h  Logger.h  Machine.h  Person.h  PriceController.h  Producer.h  Product.h  Sim.h  Society.h  leontief_function.h
Agent-Based Simulation/src/: ConsumerGood.cpp  Distributor.cpp  Firm.cpp  Logger.cpp  Machine.cpp  Person.cpp  PriceController.cpp  Producer.cpp  Product.cpp  Sim.cpp  Society.cpp  leontief_function.cpp  main.cpp
Agent-Based Simulation/test/: run_tests.sh  test_Person.cpp  test_Person.test  test_Producer.cpp  test_Society.cpp  test_leontief_function.cpp
Capitalist-Economy-in-a-Box/: CapitalistEconomy.py  generate_dependency_matrix.py  params.yml  random_events.py  simulation.py
Event-Based Simulation/: CapitalistEconomy.py  generate_dependency_matrix.py  parameters.py  random_events.py  simulation.py
Event-Based Simulation/graphs/: trajectories_with_equilibrium.csv
Hours-Money Interface/: Classes  Classes.cpp  README.md
Hours-Money Interface Improved/: README.md  main
Hours-Money Interface Improved/data/: output.csv
Hours-Money Interface Improved/include/: capitalist_company.h  capitalist_economy.h  capitalist_product.h  labor_time_company.h  labor_time_economy.h  labor_time_product.h  random_utils.h  values.h
Hours-Money Interface Improved/src/: capitalist_company.cpp  capitalist_economy.cpp  capitalist_product.cpp  labor_time_company.cpp  main.cpp  random_utils.cpp
Hours-Money Interface/include/: capitalist_company.h  capitalist_economy.h  capitalist_product.h  labor_time_company.h  labor_time_economy.h  labor_time_product.h  values.h
Hours-Money Interface/scripts/: graph.py
Hours-Money Interface/src/: capitalist_company.cpp  capitalist_economy.cpp  capitalist_product.cpp  labor_time_company.cpp  labor_time_product.cpp  lte_export.cpp  main.cpp  (+1 more)
MELT Conversion Models/: README.md  main  output.csv
Productivity-Incentives/: .gitignore  CMakeLists.txt  Makefile  README.md  innovation_details.csv  makefile  simulation_data.csv  simulation_results.csv  simulation_summary.csv
Productivity-Incentives/include/: Accountant.h  Distributor.h  Firm.h  Incentive.h  PriceController.h  Project.h  R&D.h  Simulation.h  Worker.h
Productivity-Incentives/poster/: URTC_Poster_Template - Copy (1) - Copy.odp  URTC_Poster_Template - Copy.odp
Productivity-Incentives/src/: Accountant.cpp  Distributor.cpp  Firm.cpp  Incentive.cpp  PriceController.cpp  Project.cpp  R&D.cpp  Simulation.cpp  Worker.cpp  main.cpp
Signals/: accountant.cpp  accountant.h  company.cpp  company.h  main.cpp  makefile  worker.cpp  worker.h
Summer2025/Supply-Demand-Signals/: .clang-format  CMakeLists.txt  build.sh
Summer2025/Supply-Demand-Signals/include/: Accountant.hpp  Distributor.hpp  Firm.hpp  Good.hpp  Plan.hpp  Project.hpp
Summer2025/Supply-Demand-Signals/src/: Accountant.cpp  PlotHandler.cpp  Worker.cpp
Supply-Demand/: README.md
Supply-Demand Signals/: .clang-format  .gitignore  CMakeLists.txt  build.sh  test.sh
Supply-Demand Signals/include/: Accountant.hpp  Distributor.hpp  Firm.hpp  Plan.hpp  Project.hpp  Society.hpp  Worker.hpp
Supply-Demand Signals/src/: Accountant.cpp  Distributor.cpp  Firm.cpp  Project.cpp  Society.cpp  main.cpp
Supply-Demand-Signals/: .gitignore  CMakeLists.txt  README.md  build.sh  profile.sh  recurrence_relations.md  supply-demand signal notes.md  test.sh
Supply-Demand-Signals/include/: Distributor.hpp  Firm.hpp  Good.hpp  Plan.hpp  PlotHandler.hpp  Project.hpp  Society.hpp  Worker.hpp  randomizer.hpp
Supply-Demand-Signals/src/: Distributor.cpp  Firm.cpp  Good.cpp  Plan.cpp  PlotHandler.cpp  Project.cpp  Society.cpp  Worker.cpp  main.cpp  randomizer.cpp
Trade Interface/: CapitalistEconomy.py  CapitalistProduct.py  LaborTimeEconomy.py  LaborTimeProduct.py  README.md  simulation.py
Trade Interface Improved/: CapitalistEconomy.py  LaborTimeProduct.py  README.md  US Commodity Data.txt  simulation.py
header/: Constants.h  Distributor.h  Firm.h  Logger.h  Machine.h  Person.h  Producer.h  Product.h  Sim.h  Society.h
src/: ConsumerGood.cpp  Distributor.cpp  Firm.cpp  Logger.cpp  Machine.cpp  Person.cpp  PriceController.cpp  Producer.cpp  Product.cpp  Sim.cpp  Society.cpp  main.cpp
supply-demand-signals-2/: .gitignore  makefile  test_program
(+138 files in other folders)
